--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ skip_missing_interpreters = True
 envlist = lint, unit
 
 [vars]
-src_path = {toxinidir}/spark_client/
+src_path = {toxinidir}/spark8t/
 tst_path = {toxinidir}/tests/
 all_path = {[vars]src_path} {[vars]tst_path}
 int_resources_path = tests/integration/resources/test-pyspark.py
