--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.pytest.ini_options]
-addopts = "--doctest-modules --cov=./spark_client"
+addopts = "--doctest-modules --cov=./spark8t"
 
 [tool.flake8]
 per-file-ignores = [
@@ -26,7 +26,7 @@ docstring_style = "sphinx"
 [tool.isort]
 py_version = 3
 profile = 'black'
-known_first_party = ['spark_client','tests']
+known_first_party = ['spark8t','tests']
 skip_gitignore = true
 
 [tool.mypy]
@@ -39,12 +39,14 @@ module = [
 ignore_missing_imports = true
 
 [tool.poetry]
-name = "spark-client"
+name = "spark8t"
 version = "0.0.1"
 description = "This project allow you to create a SNAP for interacting with a K8s cluster to submit Spark jobs or run spark shells interactively"
 authors = [
     "Abhishek Verma <abhishek.verma@canonical.com>",
-    "Enrico Deusebio <enrico.deusebio@canonical.com>"
+    "Enrico Deusebio <enrico.deusebio@canonical.com>",
+    "Paolo Sottovia <paolo.sottovia@canonical.com>",
+    "Judit Novak <judit.novak@canonical.com>"
 ]
 license = "MIT"
 readme = "README.md"
