--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,9 @@ follow_imports = "silent"
 
 [[tool.mypy.overrides]]
 module = [
-    "parameterized"
+    "parameterized",
+    "envyaml",
+    "pytest"
 ]
 ignore_missing_imports = true
 
@@ -56,6 +58,7 @@ packages = []
 python = ">3.8,<4.0"
 lightkube = ">=0.11"
 jinja2 = ">=3.1.2"
+envyaml = ">=1.10.211231"
 
 [tool.poetry.group.fmt]
 optional = true
