pytest-mock added

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -87,6 +87,7 @@ tox = ">3.21.4"
 mypy = ">=0.910"
 pytest-cov = ">=3.0"
 pytest = ">=6.2"
+pytest-mock = ">=3.10"
 lightkube = ">=0.11"
 pyOpenSSL = ">=23.1.1"
 
@@ -98,6 +99,7 @@ tox = ">3.21.4"
 mypy = ">=0.910"
 pytest-cov = ">=3.0"
 pytest = ">=6.2"
+pytest-mock = ">=3.10"
 lightkube = ">=0.11"
 parameterized = ">=0.9.0"
 
