integrate tests in release pipeline

--- a/.github/workflows/ci-tests.yaml
+++ b/.github/workflows/ci-tests.yaml
@@ -31,7 +31,7 @@ jobs:
       - id: tests-unit
         name: Run Unittests
         run: |
-          make unittest
+          make unittests
       - id: tests-integration
         name: Run Integration Tests
         run: |
