--- a/renovate.json
+++ b/renovate.json
@@ -2,5 +2,22 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "config:base"
-  ]
+  ],
+  "reviewers": ["welpaolo","deusebio","marcoppenheimer"],
+  "enabledManagers": ["poetry", "pip_requirements", "github-actions", "regex"],
+  "schedule": ["after 1am and before 2am every weekday"],
+  "timezone": "Etc/UTC",
+  "prHourlyLimit": 0,
+  "packageRules": [
+    {
+      "matchManagers": ["poetry", "pip_requirements"],
+      "matchDatasources": ["pypi"],
+      "groupName": "Python dependencies"
+    }, {
+      "matchManagers": ["github-actions"],
+      "groupName": "GitHub actions"
+    }
+  ],
+  "ignorePaths": [],
+  "ignoreDeps": []
 }
