--- a/renovate.json
+++ b/renovate.json
@@ -3,9 +3,9 @@
   "extends": [
     "config:base"
   ],
-  "reviewers": ["welpaolo","deusebio","marcoppenheimer"],
+  "reviewers": ["welpaolo","deusebio"],
   "enabledManagers": ["poetry", "pip_requirements", "github-actions", "regex"],
-  "schedule": ["after 1am and before 2am every weekday"],
+  "schedule": ["after 1am and before 2am every saturday"],
   "timezone": "Etc/UTC",
   "prHourlyLimit": 0,
   "packageRules": [
