Pass KUBECONFIG environment variable during test execution.

--- a/tox.ini
+++ b/tox.ini
@@ -49,6 +49,7 @@ commands =
 
 [testenv:integration]
 description = Run integration tests
+passenv = KUBECONFIG
 setenv =
     IE_TEST=1
 commands =
@@ -58,6 +59,7 @@ commands =
 
 [testenv:all-tests]
 description = Run unit tests
+passenv = KUBECONFIG
 setenv =
     IE_TEST=1
 commands =
