Pass KUBECONFIG from tox.ini instead of Makefile

--- a/tox.ini
+++ b/tox.ini
@@ -49,9 +49,9 @@ commands =
 
 [testenv:integration]
 description = Run integration tests
-passenv = KUBECONFIG
 setenv =
     IE_TEST=1
+    KUBECONFIG={env:HOME}/.kube/config
 commands =
     poetry install --with integration --sync --no-cache
     poetry export -f requirements.txt -o requirements.txt
@@ -59,9 +59,9 @@ commands =
 
 [testenv:all-tests]
 description = Run unit tests
-passenv = KUBECONFIG
 setenv =
     IE_TEST=1
+    KUBECONFIG={env:HOME}/.kube/config
 commands =
     poetry install --with unit,integration --sync --no-cache
     poetry export -f requirements.txt -o requirements.txt
