--- a/tox.ini
+++ b/tox.ini
@@ -51,6 +51,7 @@ commands =
 description = Run integration tests
 setenv =
     IE_TEST=1
+    KUBECONFIG={env:HOME}/.kube/config
 commands =
     poetry install --with integration --sync --no-cache
     poetry export -f requirements.txt -o requirements.txt
@@ -60,6 +61,7 @@ commands =
 description = Run unit tests
 setenv =
     IE_TEST=1
+    KUBECONFIG={env:HOME}/.kube/config
 commands =
     poetry install --with unit,integration --sync --no-cache
     poetry export -f requirements.txt -o requirements.txt
