changing to Canonical Data Platform

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,12 +43,9 @@ ignore_missing_imports = true
 [tool.poetry]
 name = "spark8t"
 version = "0.0.4"
-description = "This project allow you to create a SNAP for interacting with a K8s cluster to submit Spark jobs or run spark shells interactively"
+description = "This project provides some utilities function and CLI commands to run Spark on K8s."
 authors = [
-    "Enrico Deusebio <enrico.deusebio@canonical.com>",
-    "Paolo Sottovia <paolo.sottovia@canonical.com>",
-    "Judit Novak <judit.novak@canonical.com>",
-    "Bikalpa Dhakal <bikalpa.dhakal@canonical.com>"
+    "Canonical Data Platform <data-platform@lists.launchpad.net>"
 ]
 license = "MIT"
 readme = "README.md"
