--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,7 +52,7 @@ readme = "README.md"
 packages = []
 
 [tool.poetry.dependencies]
-python = ">3.8,<4.0"
+python = ">=3.8,<4.0"
 lightkube = ">=0.11"
 jinja2 = ">=3.1.2"
 envyaml = ">=1.10.211231"
