Add functions to change secret content without deleting the secret

--- a/tox.ini
+++ b/tox.ini
@@ -66,3 +66,13 @@ commands =
     poetry install --with unit,integration --sync --no-cache
     poetry export -f requirements.txt -o requirements.txt
     poetry run pytest tests
+
+[testenv:integration-kube]
+description = Run integration tests
+setenv =
+    IE_TEST=1
+    KUBECONFIG={env:HOME}/.kube/config
+commands =
+    poetry install --with integration --sync --no-cache
+    poetry export -f requirements.txt -o requirements.txt
+    poetry run pytest tests/integration/test_kube_interface.py
