Fix small issues and update  tests

--- a/tox.ini
+++ b/tox.ini
@@ -45,7 +45,7 @@ description = Run unit tests
 commands =
     poetry install --with unit --sync --no-cache
     poetry export -f requirements.txt -o requirements.txt
-    poetry run pytest tests/unittest
+    poetry run pytest -vv tests/unittest
 
 [testenv:integration]
 description = Run integration tests
@@ -55,7 +55,7 @@ setenv =
 commands =
     poetry install --with integration --sync --no-cache
     poetry export -f requirements.txt -o requirements.txt
-    poetry run pytest tests/integration
+    poetry run pytest -vv tests/integration
 
 [testenv:all-tests]
 description = Run unit tests
@@ -66,13 +66,3 @@ commands =
     poetry install --with unit,integration --sync --no-cache
     poetry export -f requirements.txt -o requirements.txt
     poetry run pytest tests
-
-[testenv:integration-kube]
-description = Run integration tests
-setenv =
-    IE_TEST=1
-    KUBECONFIG={env:HOME}/.kube/config
-commands =
-    poetry install --with integration --sync --no-cache
-    poetry export -f requirements.txt -o requirements.txt
-    poetry run pytest tests/integration/test_kube_interface.py
