chore: Upgrade tooling
Align with our existing tooling in charms

--- a/tox.ini
+++ b/tox.ini
@@ -26,18 +26,18 @@ passenv =
 [testenv:fmt]
 description = Apply coding style standards to code
 commands =
-    poetry install --only fmt 
-    poetry run isort {[vars]all_path}
-    poetry run black {[vars]all_path}
+    poetry install --only fmt
+    poetry run ruff format {[vars]all_path}
 
 [testenv:lint]
 description = Check code against coding style standards
 commands =
-    poetry install --only fmt,lint
+    poetry install --only lint
+    poetry run ruff check --fix {[vars]all_path}
+    poetry run ruff format --check {[vars]all_path}
     poetry run codespell {[vars]all_path} pyproject.toml
-    poetry run flake8 {[vars]all_path}
-    poetry run isort --check-only --diff {[vars]all_path}
-    poetry run black --check --diff {[vars]all_path}
+
+    poetry install --with lint
     poetry run mypy --install-types --non-interactive {[vars]all_path} --exclude {[vars]int_resources_path}
 
 [testenv:unit]
