ci: Enforce jammy base for workflows relying on 'sg'

--- a/.github/workflows/ci-tests.yaml
+++ b/.github/workflows/ci-tests.yaml
@@ -2,7 +2,7 @@ name: Run Tests
 
 on:
   schedule:
-    - cron: '53 0 * * *' # Daily at 00:53 UTC
+    - cron: "53 0 * * *" # Daily at 00:53 UTC
   workflow_call:
 
 jobs:
@@ -11,14 +11,14 @@ jobs:
 
   test:
     name: Unit and Integration Tests
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     timeout-minutes: 60
     strategy:
       fail-fast: true
       matrix:
         python-version:
-          - '3.9'
-          - '3.10'
+          - "3.9"
+          - "3.10"
     needs:
       - checks
     steps:
