--- a/.github/workflows/ci-checks.yaml
+++ b/.github/workflows/ci-checks.yaml
@@ -6,14 +6,14 @@ on:
 jobs:
   checks:
     name: Code checks
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     timeout-minutes: 5
     strategy:
       fail-fast: true
       matrix:
         python-version:
-          - '3.9'
-          - '3.10'
+          - "3.9"
+          - "3.10"
     steps:
       - id: checkout
         name: Checkout repo
