--- a/tox.ini
+++ b/tox.ini
@@ -26,14 +26,14 @@ passenv =
 [testenv:fmt]
 description = Apply coding style standards to code
 commands =
-    poetry install --only fmt --sync --no-cache
+    poetry install --only fmt 
     poetry run isort {[vars]all_path}
     poetry run black {[vars]all_path}
 
 [testenv:lint]
 description = Check code against coding style standards
 commands =
-    poetry install --only fmt,lint --sync --no-cache
+    poetry install --only fmt,lint
     poetry run codespell {[vars]all_path} pyproject.toml
     poetry run flake8 {[vars]all_path}
     poetry run isort --check-only --diff {[vars]all_path}
@@ -43,7 +43,7 @@ commands =
 [testenv:unit]
 description = Run unit tests
 commands =
-    poetry install --with unit --sync --no-cache
+    poetry install --with unit
     poetry export -f requirements.txt -o requirements.txt
     poetry run pytest -vv tests/unittest
 
@@ -53,7 +53,7 @@ setenv =
     IE_TEST=1
     KUBECONFIG={env:HOME}/.kube/config
 commands =
-    poetry install --with integration --sync --no-cache
+    poetry install --with integration
     poetry export -f requirements.txt -o requirements.txt
     poetry run pytest -vv tests/integration
 
@@ -63,6 +63,6 @@ setenv =
     IE_TEST=1
     KUBECONFIG={env:HOME}/.kube/config
 commands =
-    poetry install --with unit,integration --sync --no-cache
+    poetry install --with unit,integration
     poetry export -f requirements.txt -o requirements.txt
     poetry run pytest tests
