chore: Enforce support from 3.10

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ packages = []
 poetry-plugin-export = ">=1.0"
 
 [tool.poetry.dependencies]
-python = ">3.8,<4.0"
+python = ">=3.10,<4.0"
 lightkube = ">=0.11"
 jinja2 = ">=3.1.2"
 envyaml = ">=1.10.211231"
