chore: Specify type stubs in pyproject.toml

--- a/tox.ini
+++ b/tox.ini
@@ -38,7 +38,7 @@ commands =
     poetry run codespell {[vars]all_path} pyproject.toml
 
     poetry install --with lint
-    poetry run mypy --install-types --non-interactive {[vars]all_path} --exclude {[vars]int_resources_path}
+    poetry run mypy {[vars]all_path} --exclude {[vars]int_resources_path}
 
 [testenv:unit]
 description = Run unit tests
