--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,10 @@ ruff = "^0.8.6"
 codespell = "^2.1.0"
 mypy = "^1.0.0"
 pytest-mypy = ">=0.10.3"
+types-pyyaml = "^6.0.12.20241230"
+types-pygments = "^2.19.0.20250107"
+types-colorama = "^0.4.15.20240311"
+types-pyopenssl = "^24.1.0.20240722"
 
 [tool.poetry.group.unit]
 optional = true
