--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ authors = [
 ]
 license = "Apache-2.0"
 readme = "README.md"
-packages = []
+requires-poetry = ">=2.0.0"
 
 [tool.poetry.requires-plugins]
 poetry-plugin-export = ">=1.0"
@@ -98,7 +98,7 @@ per-file-ignores = { "__init__.py" = ["F401"], "tests/*" = ["D"], "tests/test_ut
 mccabe.max-complexity = 18
 
 [tool.ruff.lint.isort]
-known-first-party = ['spark8t', 'tests']
+known-first-party = ["spark8t", "tests"]
 
 [tool.mypy]
 follow_imports = "silent"
