--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,10 +7,9 @@ on:
   push:
     # Sequence of patterns matched against refs/tags
     tags:
-      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
+      - "v*" # Push events to matching v*, i.e. v1.0, v20.15.10
 
 jobs:
-
   tests:
     uses: ./.github/workflows/ci-tests.yaml
 
@@ -31,7 +30,7 @@ jobs:
         name: Setup Python
         uses: actions/setup-python@v5.3.0
         with:
-          python-version: '3.10'
+          python-version: "3.10"
           architecture: x64
       - id: install_environment
         name: Set up build environment
@@ -57,9 +56,33 @@ jobs:
       package_name: ${{ steps.package_metadata.outputs.name }}
       package_version: ${{ steps.package_metadata.outputs.version }}
 
+  build:
+    name: Build package
+    runs-on: ubuntu-latest
+    outputs:
+      VERSION: ${{ steps.build.outputs.VERSION }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Install poetry
+        run: pipx install poetry
+      - name: Check for tag and build package
+        id: build
+        run: |
+          VERSION=$(poetry version -s)
+          echo "VERSION=$VERSION" >> "$GITHUB_OUTPUT"
+          poetry build
+      - name: Store the distribution packages
+        uses: actions/upload-artifact@v4
+        with:
+          name: distfiles
+          path: dist/
+
   autorelease:
     name: Release the package on github
-    needs: [release_checks, tests]
+    needs: [release_checks, tests, build]
     runs-on: ubuntu-latest
     timeout-minutes: 5
     strategy:
@@ -71,20 +94,11 @@ jobs:
         with:
           ref: ${{ env.BRANCH }}
           fetch-depth: 0
-      - id: setup_python
-        name: Setup Python
-        uses: actions/setup-python@v5.3.0
+      - name: Download all the dists
+        uses: actions/download-artifact@v4
         with:
-          python-version: '3.10'
-          architecture: x64
-      - id: install_environment
-        name: Set up build environment
-        run: |
-          make setup
-      - id: build_package
-        name: Build package
-        run: |
-          poetry build
+          name: distfiles
+          path: dist/
       - id: artifact_names
         name: Compute artifact names outputs
         run: |
@@ -105,6 +119,21 @@ jobs:
       version: ${{ needs.release_checks.outputs.package_version }}
       wheel: ${{ steps.artifact_names.outputs.wheel }}
       tarball: ${{ steps.artifact_names.outputs.tarball }}
+
+  upload-pypi:
+    name: Publish to PyPI
+    needs: [release_checks, tests, build]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download all the dists
+        uses: actions/download-artifact@v4
+        with:
+          name: distfiles
+          path: dist/
+      - name: Publish to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+    permissions:
+      id-token: write # Needed for trusted publishing (https://packaging.python.org/en/latest/guides/publishing-package-distribution-releases-using-github-actions-ci-cd-workflows/)
 
   test:
     name: Test Release
