chore: Rename tox fmt to format for consistency

--- a/tox.ini
+++ b/tox.ini
@@ -23,7 +23,7 @@ passenv =
   PYTHONPATH
   USER
 
-[testenv:fmt]
+[testenv:format]
 description = Apply coding style standards to code
 commands =
     poetry install --only fmt
