--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ python = ">=3.10,<4.0"
 lightkube = ">=0.11"
 jinja2 = ">=3.1.2"
 envyaml = ">=1.10.211231"
+typing-extensions = "^4.14.1"
 
 [tool.poetry.group.fmt]
 optional = true
